# djinn

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/: backtest_config.yaml
djinn/: main.py
djinn/cache/: in_memory_cache.py
djinn/crawler/: YahooFinance.py  __init__.py  yahoo_finance.py  yahoo_income_statement.py
docs/plans/: 2026-02-12-backtest-engine-design.md  2026-02-12-simple-strategy-implementation.md  2026-02-12-strategy-framework-design.md
examples/: basic_backtest.py  ma_crossover_simple_example.py  portfolio_basic.py  portfolio_rebalancing.py  portfolio_with_backtest.py  simple_strategy_example.py
examples/notebooks/: 01_basic_backtest.ipynb
src/djinn/: __init__.py  __main__.py
src/djinn/cli/: __init__.py  commands.py  portfolio.py
src/djinn/core/backtest/: __init__.py  base.py  event_driven.py  metrics.py  vectorized.py
src/djinn/core/portfolio/: __init__.py  base.py  equity.py  factory.py  rebalancing.py  risk.py
src/djinn/core/strategy/: __init__.py  base.py  indicators.py  indicators_base.py  moving_average_crossover.py  parameter.py  simple.py  utils.py
src/djinn/core/strategy/impl/: __init__.py  bollinger_bands.py  macd.py  mean_reversion.py  rsi.py
src/djinn/data/: base.py  cleaner.py  fetcher.py  market_data.py
src/djinn/data/providers/: __init__.py  akshare_provider.py  yahoo_finance.py
src/djinn/utils/: config.py  date_utils.py  exceptions.py  file_utils.py  logger.py  validation.py
tests/: test_djinn_exports.py  test_parameter.py  test_simple_strategy.py  test_simple_strategy_integration.py  test_strategy_exports.py
tests/unit/backtest/: test_base.py  test_event_driven.py  test_metrics.py
tests/unit/portfolio/: test_base.py
tests/unit/strategy/: test_base.py  test_indicators.py
tests/unit/utils/: test_config.py  test_date_utils.py  test_file_utils.py  test_validation.py
