[project]
name = "djinn"
version = "0.1.0"
description = "A multi-market quantitative backtesting framework for US, HK, and Chinese stocks"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # 核心数据处理
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # 数据源
    "yfinance>=0.2.28",      # 美股数据
    "akshare>=1.12.0",       # A股/港股数据
    "tushare>=1.2.89",       # 备用数据源（需要token）
    # 技术分析
    "ta>=0.10.0",           # 技术指标库
    # 回测和量化
    "backtesting>=0.3.3",   # 参考实现
    # 可视化和报告
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",       # 交互式图表
    "seaborn>=0.12.0",
    # 配置和工具
    "pydantic>=2.0.0",      # 数据验证和配置
    "pyyaml>=6.0",          # YAML配置
    "loguru>=0.7.0",        # 结构化日志
    "click>=8.1.0",         # CLI框架
    "rich>=13.0.0",         # 终端美化
    # 性能优化
    "joblib>=1.3.0",        # 并行计算
    # 日期处理
    "pandas-market-calendars>=4.3.0",  # 市场日历
    "holidays>=0.36",                  # 节假日
    "pandas-stubs==2.3.3.260113",
]

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-xdist>=3.0.0",  # 并行测试
    "hypothesis>=6.0.0",    # 属性测试

    # 代码质量
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",

    # 开发工具
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "debugpy>=1.0.0",
]

ml = [
    # 机器学习扩展
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
]

web = [
    # Web界面扩展
    "streamlit>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/djinn"
Documentation = "https://djinn.readthedocs.io"
Repository = "https://github.com/yourusername/djinn.git"
Issues = "https://github.com/yourusername/djinn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djinn"]

[tool.hatch.build.targets.sdist]
include = ["src/djinn", "tests", "examples", "docs", "configs"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
